--- a/OR_MP_P1.ipynb
+++ b/OR_MP_P1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [
     {
@@ -110,13 +110,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [],
    "source": [
     "eg1 = Model(\"eg1\")\n",
     "\n",
     "#-------- Add variables as a list ---------#\n",
+    "# accept_k=1 if order k is accepted; accept_k=0 o.w.\n",
+    "accept = []\n",
+    "for k in range(n_K+1):\n",
+    "    if (k == 0):\n",
+    "        accept.append(int(1))\n",
+    "        continue\n",
+    "    accept.append(eg1.addVar(lb=0, vtype=GRB.BINARY, name='accept_'+str(k+1)))\n",
+    "\n",
     "# wimt = 1 if car m is at station i in period t; wimt = 0 o.w.\n",
     "w = []\n",
     "for i in range(n_S):\n",
@@ -126,54 +134,53 @@
     "        for t in range(n_T):\n",
     "            w[i][m].append(eg1.addVar(lb = 0, vtype = GRB.BINARY, name = \"w\" + str(i+1) + str(m+1) + str(t+1)))\n",
     "\n",
-    "# zpqm = 1 if order p and order q are on car m and order p is before order q\n",
+    "# z_mpq = 1 if order p and order q are on car m and order p is before order q\n",
     "z = []\n",
-    "for p in range(n_K):\n",
+    "for m in range(n_C):\n",
     "    z.append([])\n",
-    "    for q in range(n_K):\n",
-    "        z[p].append([])\n",
-    "        for m in range(n_C):\n",
-    "            z[p][q].append(eg1.addVar(lb = 0, vtype = GRB.BINARY, name = \"z\" + str(p+1) + str(q+1) + str(m+1)))\n",
+    "    for p in range(n_K+1):\n",
+    "        z[m].append([])\n",
+    "        for q in range(n_K+1):\n",
+    "            z[m][p].append(eg1.addVar(lb = 0, vtype = GRB.BINARY, name = \"z_\" + str(m+1) + str(p) + str(q)))\n",
     "\n",
-    "# xmk = 1 if order k is assigned to car m\n",
+    "# x_mk = time spent when accept order k assigned to car m (rental time)\n",
     "x = []\n",
     "for m in range(n_C):\n",
     "    x.append([])\n",
-    "    for k in range(n_K):\n",
-    "        x[m].append(eg1.addVar(lb = 0, vtype = GRB.BINARY, name = \"x\" + str(m+1) + str(k+1)))\n",
+    "    for k in range(n_K+1):\n",
+    "        if (k==0):\n",
+    "            x[m].append(int(0))\n",
+    "            continue\n",
+    "        time_units = int(df_order.loc[k-1, 'Time units'])\n",
+    "        x[m].append(eg1.addVar(lb = time_units, vtype = GRB.INTEGER, name = \"x_\" + str(m+1) + str(k)))\n",
     "\n",
     "# if there is no level-l's car in station i       \n",
-    "# (1) uik = 1 if order k is assigned to a car with a free upgrade\n",
+    "# uk = 1 if order k is upgraded\n",
     "u = []\n",
-    "for i in range(n_S):\n",
-    "    u.append([])\n",
-    "    for k in range(n_K):\n",
-    "        u[i].append(eg1.addVar(lb = 0, vtype = GRB.BINARY, name = \"u\" + str(i+1) + str(k+1)))\n",
-    "# (2) yik = 1 if if order k is assigned to a car that is moved from another station to station i\n",
-    "y = []\n",
-    "for i in range(n_S):\n",
-    "    y.append([])\n",
-    "    for k in range(n_K):\n",
-    "        y[i].append(eg1.addVar(lb = 0, vtype = GRB.BINARY, name = \"y\" + str(i+1) + str(k+1)))\n",
+    "for k in range(n_K+1):\n",
+    "    if (k==0):\n",
+    "        u.append(int(0))\n",
+    "        continue\n",
+    "    u.append(eg1.addVar(lb = 0, vtype = GRB.BINARY, name = \"u_\" + str(k)))\n",
     "\n",
-    "# Rk = revenue of order k\n",
-    "R = []\n",
-    "for k in range(n_K):\n",
-    "    time_units = int(df_order.loc[k, 'Time units'])\n",
-    "    hour_rate = int(df_order.loc[k, 'Hour rate'])\n",
-    "    R.append(eg1.addVar(lb=time_units*hour_rate, vtype=GRB.INTEGER, name=\"R\" + str(k+1)))\n",
     "\n",
-    "# rk = rental time for order k\n",
-    "r = []\n",
-    "for k in range(n_K):\n",
-    "    time_units = int(df_order.loc[k, 'Time units'])\n",
-    "    r.append(eg1.addVar(lb=time_units, vtype=GRB.INTEGER, name=\"r\" + str(k+1)))\n",
+    "# Revenue_k = revenue of order k\n",
+    "Revenue = []\n",
+    "for k in range(n_K+1):\n",
+    "    if (k==0):\n",
+    "        Revenue.append(int(0))\n",
+    "        continue\n",
+    "    time_units = int(df_order.loc[k-1, 'Time units'])\n",
+    "    hour_rate = int(df_order.loc[k-1, 'Hour rate'])\n",
+    "    Revenue.append(eg1.addVar(lb=time_units*hour_rate, vtype=GRB.INTEGER, name=\"Revenue_\" + str(k)))\n",
     "\n",
-    "# lv_Dk = demanded car level of order k\n",
     "lv_Dk = []\n",
-    "for k in range(n_K):\n",
-    "    level_demanded = int(df_order.loc[k, 'Level'])\n",
-    "    lv_Dk.append(eg1.addVar(lb=level_demanded, vtype=GRB.INTEGER, name=\"lv_Dk\" + str(k+1)))\n",
+    "for k in range(n_K+1):\n",
+    "    if (k==0):\n",
+    "        lv_Dk.append(int(0))\n",
+    "        continue    \n",
+    "    level_demanded = int(df_order.loc[k-1, 'Level'])\n",
+    "    lv_Dk.append(eg1.addVar(lb=level_demanded, vtype=GRB.INTEGER, name=\"lv_Dk\" + str(k)))\n",
     "\n",
     "# # lv_Sm = supplied car level of car m\n",
     "# lv_Sm = []\n",
@@ -181,17 +188,29 @@
     "#     level_supplied = int(df_car.loc[m, 'Level'])\n",
     "#     lv_Sm.append(eg1.addVar(lb=level_supplied, vtype=GRB.INTEGER, name=\"lv_Sm\" + str(m+1)))\n",
     "\n",
-    "# rtij = rearrangment time to move car from station i to station j\n",
-    "rt = []\n",
+    "# re_ij = rearrangment time to move car from station i to station j\n",
+    "re = []\n",
     "for i in range(n_S):\n",
-    "    rt.append([])\n",
+    "    re.append([])\n",
     "    for j in range(n_S):\n",
-    "        rt[i].append(eg1.addVar(lb=distance.iloc[j, i], vtype=GRB.INTEGER, name=\"rt\" + str(i+1) + str(j+1)))\n",
+    "        re[i].append(eg1.addVar(lb=distance.iloc[j, i], vtype=GRB.INTEGER, name=\"re_\" + str(i+1) + str(j+1)))\n",
+    "\n",
+    "# s_mpq: setup time for car m to process order q after finish order p\n",
+    "s = []\n",
+    "for m in range(n_C):\n",
+    "    s.append([])\n",
+    "    for p in range(n_K+1):\n",
+    "        s[m].append([])\n",
+    "        for q in range(n_K+1):\n",
+    "            s[m][p].append(eg1.addVar(lb=0, vtype=GRB.INTEGER, name='s_'+str(m+1)+str(p)+str(q)))\n",
     "\n",
     "# Ck = completion time of order k\n",
     "C = []\n",
-    "for k in range(n_K):\n",
-    "    C.append(eg1.addVar(lb=0, vtype = GRB.INTEGER, name = \"C\" + str(k+1)))\n",
+    "for k in range(n_K+1):\n",
+    "    if (k==0):\n",
+    "        C.append(int(0))\n",
+    "        continue   \n",
+    "    C.append(eg1.addVar(lb=0, vtype = GRB.INTEGER, name = \"C_\" + str(k)))\n",
     "\n",
     "# Om = latest completion time of orders on car m\n",
     "O = []\n",
@@ -204,51 +223,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [],
    "source": [
     "eg1.setObjective(\n",
-    "    quicksum(R[k] for k in range(n_K))\\\n",
-    "    ,GRB.MAXIMIZE\n",
-    ")"
+    "    quicksum(accept[k]*Revenue[k] - (1-accept[k])*2*Revenue[k] for k in range(n_K+1)),\n",
+    "    GRB.MAXIMIZE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<gurobi.QConstr Not Yet Added>"
+       "{0: <gurobi.Constr *Awaiting Model Update*>,\n",
+       " 1: <gurobi.Constr *Awaiting Model Update*>,\n",
+       " 2: <gurobi.Constr *Awaiting Model Update*>}"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 434,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eg1.addConstrs((sum(x[m][k] for m in range(n_C)) <= 1 for k in range(n_K)), \"每份order對應到一台車(但也可以不接單)\")\n",
-    "eg1.addConstrs((O[m] <= Cmax for m in range(n_C)), \"links the individual car makespan to the overall schedule makespan\")\n",
-    "eg1.addConstrs((x[m][p]+x[m][q] <= z[p][q][m]+z[q][p][m]+1) for m in range(n_C) for p in range(n_K) for q in range(n_K))\n",
-    "eg1.addConstrs((C[p]+r[p]-C[q] <=  A * ( 1- z[p][q][m])) for m in range(n_C) for p in range(n_K) for q in range(n_K))\n",
-    "eg1.addConstrs(C[k] >= r[k] + 6 + 1 for k in range(n_K)) # 7 = 6單位的清潔+1單位的提前到點\n",
-    "eg1.addConstrs(C[k] >= 0 for k in range(n_K))\n",
-    "eg1.addConstrs(C[k] <= Cmax for k in range(n_K))\n",
+    "# Each order has a single predecessor (successor) on exactaly one of the car\n",
+    "eg1.addConstrs((quicksum(z[m][p][q] for m in range(n_C) for p in range(n_K+1) if (p!=q)) == 1) for q in range(n_K))\n",
+    "eg1.addConstrs((quicksum(z[m][p][q] for m in range(n_C) for q in range(n_K+1) if (p!=q)) == 1) for p in range(n_K))\n",
     "\n",
-    "# The total time spent on moving all cars cannot exceed B minutes\n",
-    "total_move_time = gurobipy.quicksum(rt[i][j] * y[i][k] for k in range(n_K) for i in range(n_S) for j in range(n_S))\n",
-    "eg1.addConstr(total_move_time <= B)\n",
+    "# An order can only have a predecessor on a car if it also has a successor on that same car\n",
+    "eg1.addConstrs((quicksum(z[m][p][q] for q in range(n_K+1) if (p!=q)) == quicksum(z[m][h][p] for h in range(n_K+1) if (h!=p))) for p in range(n_K) for m in range(n_C))\n",
     "\n",
-    "\n"
+    "# the completion times of each order s.t. if order p precedes order q on a car m, \n",
+    "# the earliest time that order q can end must be greater than Cp + setup time from order p to order q and the processing time of order q\n",
+    "eg1.addConstrs((C[q]-C[p] + A*(1-z[m][p][q]) >= s[m][p][q] + x[m][q]) for p in range(n_K+1) for q in range(n_K) if (p!=q) for m in range(n_C))\n",
+    "\n",
+    "# Only one order can be schedueled first on each car\n",
+    "eg1.addConstrs((quicksum(z[m][0][p] for p in range(n_K)) <= 1) for m in range(n_C))\n",
+    "\n",
+    "# C0=0, an auxiliary order used to enforce the start of the schedule\n",
+    "eg1.addConstrs(C[0] == 0 for m in range(n_C))\n",
+    "\n",
+    "# Calculate the makespan for each individual car\n",
+    "eg1.addConstrs((quicksum(((s[m][p][q] + x[m][q]) * z[m][p][q]) for q in range(n_K) for p in range(n_K+1) if (p!=q))  == O[m]) for m in range(n_C))\n",
+    "# Links the individual car makespan to the overall schedule makespan\n",
+    "eg1.addConstrs((O[m] <= Cmax for m in range(n_C)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [
     {
@@ -260,19 +288,20 @@
       "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
-      "Optimize a model with 98 rows, 1003 columns and 316 nonzeros\n",
-      "Model fingerprint: 0x0c96a29e\n",
-      "Model has 76 quadratic constraints\n",
-      "Variable types: 0 continuous, 1003 integer (974 binary)\n",
+      "Optimize a model with 34 rows, 1129 columns and 321 nonzeros\n",
+      "Model fingerprint: 0xf0f5b55c\n",
+      "Model has 5 quadratic objective terms\n",
+      "Model has 78 quadratic constraints\n",
+      "Variable types: 0 continuous, 1129 integer (982 binary)\n",
       "Coefficient statistics:\n",
-      "  Matrix range     [1e+00, 2e+00]\n",
+      "  Matrix range     [1e+00, 1e+00]\n",
       "  QMatrix range    [1e+00, 1e+00]\n",
       "  QLMatrix range   [1e+00, 1e+00]\n",
-      "  Objective range  [1e+00, 1e+00]\n",
+      "  Objective range  [2e+00, 2e+00]\n",
+      "  QObjective range [6e+00, 6e+00]\n",
       "  Bounds range     [1e+00, 2e+04]\n",
-      "  RHS range        [1e+00, 7e+00]\n",
-      "  QRHS range       [6e+00, 6e+00]\n",
-      "Presolve removed 0 rows and 889 columns\n",
+      "  RHS range        [1e+00, 1e+00]\n",
+      "Presolve removed 9 rows and 938 columns\n",
       "Presolve time: 0.00s\n",
       "\n",
       "Explored 0 nodes (0 simplex iterations) in 0.02 seconds (0.00 work units)\n",
@@ -291,7 +320,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-264-22b1a60a5fb9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0meg1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptimize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"z* = \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0meg1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mObjVal\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-435-22b1a60a5fb9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0meg1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptimize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"z* = \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0meg1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mObjVal\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;32msrc\\gurobipy\\model.pxi\u001b[0m in \u001b[0;36mgurobipy.Model.__getattr__\u001b[1;34m()\u001b[0m\n",
       "\u001b[1;32msrc\\gurobipy\\model.pxi\u001b[0m in \u001b[0;36mgurobipy.Model.getAttr\u001b[1;34m()\u001b[0m\n",
       "\u001b[1;32msrc\\gurobipy\\attrutil.pxi\u001b[0m in \u001b[0;36mgurobipy.__getattr\u001b[1;34m()\u001b[0m\n",
