--- a/OR_MP_P1.ipynb
+++ b/OR_MP_P1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 641,
+   "execution_count": 674,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 642,
+   "execution_count": 675,
    "metadata": {},
    "outputs": [
     {
@@ -31,10 +31,8 @@
       "8  Car level Hour rate\n",
       "9          1       200\n",
       "10         2       300\n",
-      "To    1  2\n",
-      "From      \n",
-      "1     0  3\n",
-      "2     3  0\n"
+      "[[0 3]\n",
+      " [3 0]]\n"
      ]
     }
    ],
@@ -100,13 +98,13 @@
     "df_distance = df_distance[1:]\n",
     "distance = df_distance.pivot(index='From', columns='To', values='Distance')\n",
     "distance = distance.apply(pd.to_numeric, errors='coerce') // 30\n",
-    "\n",
-    "print(distance)"
+    "distance_array = distance.values\n",
+    "print(distance_array)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 643,
+   "execution_count": 676,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,13 +181,19 @@
     "# if there is no level-l's car in station i       \n",
     "# uk = 1 if order k is upgraded\n",
     "u = []\n",
-    "for k in range(n_K):\n",
-    "    u.append(eg1.addVar(lb = 0, vtype = GRB.BINARY, name = \"u_\" + str(k+1)))\n",
+    "for k in range(n_K+1):\n",
+    "    if (k==0):\n",
+    "        u.append(int(0))\n",
+    "        continue    \n",
+    "    u.append(eg1.addVar(lb = 0, vtype = GRB.BINARY, name = \"u_\" + str(k)))\n",
     "\n",
     "# vk = 1 if order k is required to move a car from other station\n",
     "v = []\n",
-    "for k in range(n_K):\n",
-    "    v.append(eg1.addVar(lb = 0, vtype = GRB.BINARY, name = \"v_\" + str(k+1)))\n",
+    "for k in range(n_K+1):\n",
+    "    if (k==0):\n",
+    "        v.append(int(0))\n",
+    "        continue    \n",
+    "    v.append(eg1.addVar(lb = 0, vtype = GRB.BINARY, name = \"v_\" + str(k)))\n",
     "\n",
     "# re_ij = rearrangment time to move car from station i to station j\n",
     "re = []\n",
@@ -221,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 644,
+   "execution_count": 677,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,21 +236,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 646,
+   "execution_count": 678,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-646-376467d2c814>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;31m# 移車/升等二選一\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 24\u001b[1;33m \u001b[0meg1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maddConstrs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mu\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[0maccept\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_K\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     25\u001b[0m \u001b[1;31m# 如果有移車，那s[m][p][q]至少是7個單位(清潔*6 + 提早1單位到達) + 移車所需的時間\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[0meg1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maddConstrs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mq\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mq\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mre\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfinish\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mpickup\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mq\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mp\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_K\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mq\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_K\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m!=\u001b[0m\u001b[0mq\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mm\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_C\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32msrc\\gurobipy\\model.pxi\u001b[0m in \u001b[0;36mgurobipy.Model.addConstrs\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-646-376467d2c814>\u001b[0m in \u001b[0;36m<genexpr>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;31m# 移車/升等二選一\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 24\u001b[1;33m \u001b[0meg1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maddConstrs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mu\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[0maccept\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_K\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     25\u001b[0m \u001b[1;31m# 如果有移車，那s[m][p][q]至少是7個單位(清潔*6 + 提早1單位到達) + 移車所需的時間\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[0meg1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maddConstrs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mq\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mq\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mre\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfinish\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mpickup\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mq\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mp\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_K\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mq\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_K\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m!=\u001b[0m\u001b[0mq\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mm\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_C\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "text/plain": [
+       "{(1, 2, 0): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (1, 2, 1): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (1, 2, 2): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (1, 3, 0): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (1, 3, 1): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (1, 3, 2): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (1, 4, 0): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (1, 4, 1): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (1, 4, 2): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (1, 5, 0): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (1, 5, 1): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (1, 5, 2): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (2, 1, 0): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (2, 1, 1): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (2, 1, 2): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (2, 3, 0): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (2, 3, 1): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (2, 3, 2): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (2, 4, 0): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (2, 4, 1): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (2, 4, 2): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (2, 5, 0): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (2, 5, 1): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (2, 5, 2): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (3, 1, 0): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (3, 1, 1): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (3, 1, 2): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (3, 2, 0): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (3, 2, 1): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (3, 2, 2): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (3, 4, 0): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (3, 4, 1): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (3, 4, 2): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (3, 5, 0): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (3, 5, 1): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (3, 5, 2): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (4, 1, 0): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (4, 1, 1): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (4, 1, 2): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (4, 2, 0): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (4, 2, 1): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (4, 2, 2): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (4, 3, 0): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (4, 3, 1): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (4, 3, 2): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (4, 5, 0): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (4, 5, 1): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (4, 5, 2): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (5, 1, 0): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (5, 1, 1): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (5, 1, 2): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (5, 2, 0): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (5, 2, 1): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (5, 2, 2): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (5, 3, 0): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (5, 3, 1): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (5, 3, 2): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (5, 4, 0): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (5, 4, 1): <gurobi.Constr *Awaiting Model Update*>,\n",
+       " (5, 4, 2): <gurobi.Constr *Awaiting Model Update*>}"
+      ]
+     },
+     "execution_count": 678,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -275,12 +335,12 @@
     "# 移車/升等二選一\n",
     "eg1.addConstrs(u[k]+v[k] <= accept[k] for k in range(n_K+1)) \n",
     "# 如果有移車，那s[m][p][q]至少是7個單位(清潔*6 + 提早1單位到達) + 移車所需的時間\n",
-    "eg1.addConstrs(s[m][p][q] >= 6+v[q]+re[finish[p]][pickup[q]] for p in range(n_K+1) for q in range(1, n_K+1) if (p!=q) for m in range(n_C)) "
+    "eg1.addConstrs(s[m][p][q] >= 6+v[q]+distance_array[finish[p]-1][pickup[q]-1] for p in range(1, n_K+1) for q in range(1, n_K+1) if (p!=q) for m in range(n_C)) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 679,
    "metadata": {},
    "outputs": [
     {
@@ -292,23 +352,23 @@
       "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
-      "Optimize a model with 709 rows, 10276 columns and 3642 nonzeros\n",
-      "Model fingerprint: 0x62b036f1\n",
-      "Model has 10 quadratic objective terms\n",
-      "Model has 606 quadratic constraints\n",
-      "Variable types: 0 continuous, 10276 integer (9396 binary)\n",
+      "Optimize a model with 100 rows, 1134 columns and 456 nonzeros\n",
+      "Model fingerprint: 0xf6bb821c\n",
+      "Model has 5 quadratic objective terms\n",
+      "Model has 78 quadratic constraints\n",
+      "Variable types: 0 continuous, 1134 integer (987 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 1e+00]\n",
       "  QMatrix range    [1e+00, 1e+00]\n",
       "  QLMatrix range   [1e+00, 1e+00]\n",
       "  Objective range  [2e+00, 2e+00]\n",
       "  QObjective range [6e+00, 6e+00]\n",
-      "  Bounds range     [1e+00, 7e+04]\n",
-      "  RHS range        [1e+00, 6e+00]\n",
-      "Presolve removed 629 rows and 8935 columns\n",
+      "  Bounds range     [1e+00, 2e+04]\n",
+      "  RHS range        [1e+00, 9e+00]\n",
+      "Presolve removed 75 rows and 943 columns\n",
       "Presolve time: 0.00s\n",
       "\n",
-      "Explored 0 nodes (0 simplex iterations) in 0.03 seconds (0.00 work units)\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.02 seconds (0.00 work units)\n",
       "Thread count was 1 (of 8 available processors)\n",
       "\n",
       "Solution count 0\n",
@@ -324,7 +384,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-600-4c379b4a068a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mp\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_K\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mq\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_K\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mq\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m' '\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'\\n'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-679-4c379b4a068a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mp\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_K\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mq\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_K\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mq\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m' '\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'\\n'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32msrc\\gurobipy\\var.pxi\u001b[0m in \u001b[0;36mgurobipy.Var.__getattr__\u001b[1;34m()\u001b[0m\n",
       "\u001b[1;32msrc\\gurobipy\\var.pxi\u001b[0m in \u001b[0;36mgurobipy.Var.getAttr\u001b[1;34m()\u001b[0m\n",
       "\u001b[1;32msrc\\gurobipy\\attrutil.pxi\u001b[0m in \u001b[0;36mgurobipy.__getattr\u001b[1;34m()\u001b[0m\n",
